force-app/main/default/objects/Trek__c/Trek__c.object-meta.xml
<CustomObject>
    <description>Trek Overview</description>
    <label>Trek</label>
    <nameField>
        <label>Trek Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Treks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>