force-app/main/default/objects/Trek__c/fields/Confirmed_Booking__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Booking__c</fullName>
    <label>Confirmed Booking</label>
    <summarizedField>Trek_Booking__c.Team_Size__c</summarizedField>
    <summaryFilterItems>
        <field>Trek_Booking__c.Booking_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>Trek_Booking__c.Trek__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>