force-app/main/default/objects/Trek__c/fields/Max_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Group_Size__c</fullName>
    <label>Max Group Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>