force-app/main/default/objects/Trek__c/fields/Number_Of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Bookings__c</fullName>
    <label>Number Of Bookings</label>
    <summaryForeignKey>Trek_Booking__c.Trek__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>