force-app/main/default/objects/Trek__c/fields/Remaing_Size__c.field-meta.xml
<CustomField>
    <fullName>Remaing_Size__c</fullName>
    <formula>Max_Group_Size__c - Confirmed_Booking__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaing Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>