force-app/main/default/objects/Trek__c/validationRules/EndDate_Greater_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_Greater_Than_StartDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c  &lt; Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date Should Be Greater Than Start Date</errorMessage>
</ValidationRule>