force-app/main/default/objects/Trek__c/validationRules/StartDate_IsNOt_PastDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_IsNOt_PastDate</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date Cannot   Be Past Date</errorMessage>
</ValidationRule>